<resources>
    <string name="app_name">PhotoAlbum</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="album">Album</string>
    <string name="favorite">Favorite</string>
    <string name="recent">Recent</string>
    <string name="recycle_bin">Recycle bin</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
</resources>